# system-gnome-theme

./: Makefile  README.md
src/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  configure.ac~
src/po/: Makefile  Makefile.in  POTFILES
src/theme/: Makefile  Makefile.am  Makefile.in  index.theme  index.theme.in
