AC_INIT(system-gnome-theme, 60.0.2)

AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

IT_PROG_INTLTOOL

GETTEXT_PACKAGE=system-gnome-theme
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AM_GLIB_GNU_GETTEXT

THEME_DIR=${datadir}/themes
AC_SUBST(THEME_DIR)

GTK_CONF_DIR=${sysconfdir}/gtk-2.0
AC_SUBST(GTK_CONF_DIR)

ALL_LINGUAS=""

AC_OUTPUT([ 
  Makefile
  theme/Makefile
  po/Makefile.in
])
